--- a/package.json
+++ b/package.json
@@ -6,6 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "@fontsource/roboto": "4.5.1",
+    "@mui/icons-material": "5.3.1",
+    "@mui/material": "5.3.1",
+    "axios": "0.25.0",
     "next": "9.4.1",
     "next-redux-wrapper": "^7.0.2",
     "react": "^17.0.2",
